# playground

./: .gitignore  CMakeLists.txt  README.md
Assimp/: CMakeLists.txt
Assimp/code/AssetLib/MDL/: MDLLoader.cpp
CGAL/: CMakeLists.txt
ZeroMQ/: CMakeLists.txt
assets/models/: bob_lamp_update.md5mesh  contraption.mtl  cyborg.mtl
assets/shaders/: animated_model_meshes.frag.spv  animated_model_meshes.vert.spv  animated_model_meshes_gpu.frag.spv  animated_model_meshes_gpu.vert.spv  color_meshes.frag.spv  color_meshes.vert.spv  color_meshes_gpu.frag.spv  color_meshes_gpu.vert.spv  cull-indexed.comp.spv  cull-vertex.comp.spv  cull.comp.spv  dynamic_color_meshes.vert.spv  dynamic_color_vertices_minimal.frag.spv  dynamic_color_vertices_minimal.vert.spv  model_meshes.frag.spv  model_meshes.vert.spv  skybox.frag.spv  skybox.vert.spv  static_color_meshes.frag.spv  static_color_meshes.vert.spv  static_color_vertices_minimal.vert.spv  texture_meshes.frag.spv  texture_meshes.vert.spv  texture_meshes_gpu.frag.spv  texture_meshes_gpu.vert.spv  vertex_meshes_gpu.vert.spv
shaders/: test.frag.spv  test.geom.spv  test.vert.spv
src/: android.cpp  animated-model-mesh-pipeline.cpp  camera.cpp  color-mesh-pipeline.cpp  communication.cpp  cull-pipeline.cpp  desktop.cpp  dynamic-color-mesh-pipeline.cpp  dynamic-color-vertex-pipeline.cpp  engine.cpp  geometry.cpp  graphics.cpp  helper.cpp  imgui-pipeline.cpp  model-mesh-pipeline.cpp  models.cpp  object-factory.cpp  objects.cpp  physics-objects.cpp  physics.cpp  pipeline.cpp  platform.cpp  platorm.cpp  renderer.cpp  server.cpp  shader.cpp  shared.cpp  skybox-pipeline.cpp  static-color-mesh-pipeline.cpp  static-color-vertex-pipeline.cpp  texture-mesh-pipeline.cpp  texture.cpp  vertex-mesh-pipeline.cpp  world.cpp
src/includes/: common.h  communication.h  engine.h  geometry.h  graphics.h  helper.h  logging.h  message.h  models.h  objects.h  physics.h  pipeline.h  pipelines.h  renderer.h  server.h  shared.h  texture.h  world.h
src/schemas/: message.fbs
src/shaders/: animated_model_meshes.frag  animated_model_meshes.vert  animated_model_meshes_gpu.frag  animated_model_meshes_gpu.vert  color_meshes.frag  color_meshes.vert  color_meshes_gpu.frag  color_meshes_gpu.vert  cull-indexed.comp  cull-vertex.comp  cull.comp  dynamic_color_meshes.frag  dynamic_color_meshes.vert  model_meshes.frag  model_meshes.vert  normals.geom  skybox.frag  skybox.vert  static_color_meshes.frag  static_color_meshes.vert  static_color_vertices_minimal.frag  static_color_vertices_minimal.vert  test.frag  test.vert  texture_meshes.frag  texture_meshes.vert  texture_meshes_gpu.frag  texture_meshes_gpu.vert  vertex_meshes_gpu.vert
